# format_xml

./: Cargo.toml  license.txt  readme.md
src/: escape.rs  html.rs  lib.rs  prelude.rs  template.rs  template_impl.rs  util.rs  xfmt.rs  xml.rs  xml_impl.rs
tests/: x.rs
