[package]
name = "format_xml"
version = "0.1.2"
edition = "2018"

authors = ["Casper <CasualX@users.noreply.github.com>"]
description = "Minimal compile time templating for XML in Rust!"
documentation = "https://docs.rs/format_xml"
repository = "https://github.com/CasualX/format_xml"
keywords = ["xml", "html", "format"]
categories = ["template-engine"]
readme = "readme.md"
license = "MIT"
