[package]
name = "format_xml"
version = "0.1.6"
edition = "2018"

authors = ["Casper <CasualX@users.noreply.github.com>"]
description = "Minimal compiletime templating for XML in Rust!"
documentation = "https://docs.rs/format_xml"
repository = "https://github.com/CasualX/format_xml"
keywords = ["xml", "html", "svg", "template", "format"]
categories = ["template-engine"]
readme = "readme.md"
license = "MIT"
