[package]
name = "format_xml"
version = "0.3.0"
authors = ["Casper <CasualX@users.noreply.github.com>"]
edition = "2018"
license = "MIT"

description = "Fast, minimal, feature-rich, xml-like formatting syntax for Rust!"
documentation = "https://docs.rs/format_xml"
repository = "https://github.com/CasualX/format_xml"
readme = "readme.md"
keywords = ["xml", "html", "svg", "template", "format"]
categories = ["no-std", "template-engine"]

[features]
default = ["std"]
std = []

# Optional feature to obfuscate all the string literals
obfstr = ["fmtools/obfstr"]

[dependencies]
fmtools = "0.1"
